--- a/css/modules/header.css
+++ b/css/modules/header.css
@@ -11,7 +11,6 @@
 .navigation__hamburger-button {
 	height: 2em;
 	transition: transform 0.2s ease-in;
-
 }
 
 .navigation__hamburger-button:hover {
@@ -24,7 +23,7 @@
 
 .navigation__close-button {
 	display: none;
-	z-index: 4;
+	z-index: 5;
 	background-color: var(--red);
 }
 
@@ -40,7 +39,7 @@
 	bottom: 0;
 	height: 100vh;
 	width: 100vw;
-	z-index: 3;
+	z-index: 4;
 	font-family: 'Bellefair', sans-serif;
 	text-transform: uppercase;
 	padding: 1em 0.5em;
